testes com html

--- a/templates/contatos.html
+++ b/templates/contatos.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8"/>
-<title>contatos</title>
-</head>
-<body>
-    <p>nosso contato:</p> 
-    <p>devtiago01@gmail.com</p>
-    <p>(86) 9 8105-7023</p>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block body %}
+        <h1><p>nosso contato:</p></h1>
+        <p>devtiago01@gmail.com</p>
+        <p>(86) 9 8105-7023</p>
+{% endblock %}
