--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8"/>
-<title>homepage</title>
-</head>
-<body>
-    <p>Esse é meu primeiro site, ta na hora do pau!</p>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block body %}
+    <div><h1><p>Esse é meu primeiro site, ta na hora do pau!</p></h1>
+        <h2 style="color blue">bora pra cima</h2>
+        </div>
+{% endblock %}
