--- a/templates/base.html
+++ b/templates/base.html
@@ -3,13 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <title>comunidade rock</title>
+         <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous"
+
         {% block head%}
         {% endblock %}
     </head>
     <body>
 
+        {% include 'navbar.html' %}
         {% block body%}
         {% endblock %}
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
     </body>
     </html>
