--- a/templates/contatos.html
+++ b/templates/contatos.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 
-{% block body %}
-        <h1><p>nosso contato:</p></h1>
-        <p>devtiago01@gmail.com</p>
-        <p>(86) 9 8105-7023</p>
-{% endblock %}
+        {% block body %}
+        <div class="container">
+                <h1><p>nosso contato:</p></h1>
+                <p>devtiago01@gmail.com</p>
+                <p>(86) 9 8105-7023</p>
+        {% endblock %}
