--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block body %}
+    <div class="container">
     <div><h1><p>Esse é meu primeiro site, ta na hora do pau!</p></h1>
         <h2 style="color blue">bora pra cima</h2>
         </div>
