--- a/templates/usuarios.html
+++ b/templates/usuarios.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'base.html' %}
+
+    {% block body %}
+        <div class="container">
+        <div><h1><p>usuarios</p></h1>
+        {% for usuario in lista_usuarios %}
+       <p>{{ usuario }}</p>
+       <hr>
+         {% endfor %}
+            </div>
+    {% endblock %}
