--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,28 +1,28 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid container">
-    <a class="navbar-brand" href="/">Comunidade Rock</a>
+    <a class="navbar-brand" href="{{ url_for('homepage')}}">Comunidade Rock</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">Início</a>
+          <a class="nav-link active" aria-current="page" href="{{ url_for('homepage')}}">Início</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/usuarios">Usuários</a>
+          <a class="nav-link" href="{{ url_for('usuarios')}}">Usuários</a>
         </li>
          <li class="nav-item">
-          <a class="nav-link" href="contatos">Contatos</a>
+          <a class="nav-link" href="{{ url_for('contatos')}}">Contatos</a>
         </li>
 
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">Login</a>
+          <a class="nav-link" href="{{ url_for('login')}}">Login</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Cadastre-se</a>
+          <a class="nav-link" href="{{ url_for('login')}}">Cadastre-se</a>
         </li>
       </ul>
     </div>
