--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -2,7 +2,7 @@
 
 {% block body %}
     <div class="container">
-    <div><h1><p>Esse é meu primeiro site, ta na hora do pau!</p></h1>
+    <div><h1><p>Esse é meu primeiro site!</p></h1>
         <h2 style="color blue">bora pra cima</h2>
         </div>
 {% endblock %}
