--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,12 @@
     <body>
 
         {% include 'navbar.html' %}
+
+
+        {% with mensagens = get_flashed_messages(with_categories=True) %}
+            {% if %}
+        {% endwith %}
+
         {% block body%}
         {% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
