--- a/templates/login.html
+++ b/templates/login.html
@@ -13,11 +13,38 @@
                     <legend><p>login</p></legend>
                     <div class="form-gorup">
                         {{ form_login.email.label(class="form-control-label") }}
-                        {{ form_login.email(class = "form-control")}}
+
+                        {% if form_login.email.errors %}
+                            {{ form_login.email(class="form-control is-invalid" ) }}
+
+                        <div class="invalid-feedback">
+                            {% for erro in form_login.email.errors %}
+                                {{ erro }}
+                            {% endfor %}
+                        </div>
+                        {% else %}
+
+                            {{ form_login.email(class = "form-control")}}
+
+                        {% endif %}
+
                     </div>
                     <div class="form-gorup">
                         {{ form_login.senha.label(class="form-conrtol-label") }}
-                        {{ form_login.senha(class="form-control") }}
+
+                        {% if form_login.senha.errors %}
+                            {{ form_login.senha(class="form-control is-invalid" ) }}
+
+                        <div class="invalid-feedback">
+                            {% for erro in form_login.senha.errors %}
+                                {{ erro }}
+                            {% endfor %}
+                        </div>
+                        {% else %}
+
+                            {{ form_login.senha(class = "form-control")}}
+
+                        {% endif %}
                     <div class="form-gorup">
                         {{ form_login.lembrar_dados.label(class = "form-check-label") }}
                         {{ form_login.lembrar_dados(class = "form-check-input") }}
@@ -34,19 +61,67 @@
                 <fieldset>
                 <div class="form-gorup">
                     {{ form_criar_conta.username.label(class="form-control-label") }}
-                    {{ form_criar_conta.username(class="form-control") }}
+                    {% if form_criar_conta.username.errors %}
+                            {{ form_criar_conta.username(class="form-control is-invalid" ) }}
+
+                        <div class="invalid-feedback">
+                            {% for erro in form_criar_conta.username.errors %}
+                                {{ error }}
+                            {% endfor %}
+                        </div>
+                        {% else %}
+                        
+                            {{ form_criar_conta.username(class = "form-control")}}
+
+                        {% endif %}
                 </div>
                  <div class="form-gorup">
                     {{ form_criar_conta.email.label(class="form-control-label") }}
-                    {{ form_criar_conta.email(class="form-control") }}
+                    {% if form_criar_conta.email.errors %}
+                            {{ form_criar_conta.email(class="form-control is-invalid" ) }}
+
+                        <div class="invalid-feedback">
+                            {% for erro in form_criar_conta.email.errors %}
+                                {{ error }}
+                            {% endfor %}
+                        </div>
+                        {% else %}
+                        
+                            {{ form_criar_conta.email(class = "form-control")}}
+
+                        {% endif %}
                 </div>
                 <div class="form-gorup">
                     {{ form_criar_conta.senha.label(class="form-control-label") }}
-                    {{ form_criar_conta.senha(class="form-control") }}
+                    {% if form_criar_conta.senha.errors %}
+                            {{ form_criar_conta.senha(class="form-control is-invalid" ) }}
+
+                        <div class="invalid-feedback">
+                            {% for erro in form_criar_conta.senha.errors %}
+                                {{ error }}
+                            {% endfor %}
+                        </div>
+                        {% else %}
+                        
+                            {{ form_criar_conta.senha(class = "form-control")}}
+
+                        {% endif %}
                 </div>
                 <div class="form-gorup">
                     {{ form_criar_conta.confirmação.label(class="form-control-label") }}
-                    {{ form_criar_conta.confirmação(class="form-control") }}
+                    {% if form_criar_conta.confirmação.errors %}
+                            {{ form_criar_conta.confirmação(class="form-control is-invalid" ) }}
+
+                        <div class="invalid-feedback">
+                            {% for erro in form_criar_conta.confirmação.errors %}
+                                {{ error }}
+                            {% endfor %}
+                        </div>
+                        {% else %}
+                        
+                            {{ form_criar_conta.confirmação(class = "form-control")}}
+
+                        {% endif %}
                 </div>
                 </fieldset>
                 {{ form_criar_conta.botão_submit_criarconta(class = "btn btn-primary m-2") }}
